<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewNombre" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:enabled="false"
        android:hint="@string/editTextNombre" />


    <TextView
        android:id="@+id/textViewApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewApellido" />

    <EditText
        android:id="@+id/editTextApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:enabled="false"
        android:hint="@string/editTextApellido" />

    <TextView
        android:id="@+id/textViewDividendo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewDividendo" />

    <EditText
        android:id="@+id/editTextDividendo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:enabled="false"
        android:hint="@string/editTextDividendo" />

    <TextView
        android:id="@+id/textViewDivisor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewDivisor" />

    <EditText
        android:id="@+id/editTextDivisor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:enabled="false"
        android:hint="@string/editTextDivisor" />

    <TextView
        android:id="@+id/textViewParteEntera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewParteEntera" />

    <EditText
        android:id="@+id/editTextParteEntera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:enabled="false"
        android:hint="@string/editTextParteEntera" />

    <TextView
        android:id="@+id/textViewResiduo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewResiduo" />

    <EditText
        android:id="@+id/editTextResiduo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:enabled="false"
        android:hint="@string/editTextResiduo" />

    <TextView
        android:id="@+id/textViewNum_Invertido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewNum_Invertido" />

    <EditText
        android:id="@+id/editTextNum_Invertido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:enabled="false"
        android:hint="@string/editTextNum_Invertido" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Siguiente" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Resultado" />

</LinearLayout>