<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewNombre" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextNombre"
        android:inputType="text" />


    <TextView
        android:id="@+id/textViewApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewApellido" />

    <EditText
        android:id="@+id/editTextApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextApellido"
        android:inputType="text" />

    <TextView
        android:id="@+id/textViewDividendo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewDividendo" />

    <EditText
        android:id="@+id/editTextDividendo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:enabled="false"
        android:hint="@string/editTextDividendo" />

    <TextView
        android:id="@+id/textViewDivisor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewDivisor" />

    <EditText
        android:id="@+id/editTextDivisor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:enabled="false"
        android:hint="@string/editTextDivisor" />


    <TextView
        android:id="@+id/textViewNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewNumero" />

    <EditText
        android:id="@+id/editTextNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/editTextNumero"
        android:inputType="none" />

    <Button
        android:id="@+id/button_Siguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Siguiente" />

    <Button
        android:id="@+id/button_Resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Resultado" />

</LinearLayout>